--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -26,6 +26,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: justify;
 }
 
 .info-container {
